B-F Backup Sandbox 30.4.12/src/objects/B_F_Event_Response__c.object
<CustomObject>
    <description>Created for FDC-PLFC, this is a conjuction object that will relate the Contact to the B-F Event with the appropriate reponse.  Roll-up summaries on the B-F Event refer to this object.</description>
    <fields>
        <fullName>B_F_Event__c</fullName>
        <description>FDC-PLFC</description>
        <inlineHelpText>The event that the contact is invited to</inlineHelpText>
        <label>B-F Event</label>
        <referenceTo>B_F_Event__c</referenceTo>
        <relationshipLabel>B-F Event Responses</relationshipLabel>
        <relationshipName>B_F_Event_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person that has received an invitation to the event</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>B-F Event Responses</relationshipLabel>
        <relationshipName>B_F_Event_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>B-F Event Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>B-F Event Responses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B-F Event Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>